# withsecure_phase23

./: .gitignore  README.md
1_from_monolith_to_microservices/: Makefile  README.md  pyproject.toml  setup.cfg
1_from_monolith_to_microservices/src/: __init__.py  runner_builder.py  runner_inference.py
1_from_monolith_to_microservices/src/config/: __init__.py  logger.py  model.py
1_from_monolith_to_microservices/src/model/: __init__.py  model_builder.py  model_inference.py
1_from_monolith_to_microservices/src/model/pipeline/: __init__.py  collection.py  model.py  preparation.py
2_intro_to_FastAPI_inference_api/: Dockerfile  Makefile  README.md  pyproject.toml  train.py
2_intro_to_FastAPI_inference_api/data/: test_data.csv  test_labels.csv  train_data.csv  train_labels.csv
2_intro_to_FastAPI_inference_api/inference/: api.py
2_intro_to_FastAPI_inference_api/tests/: test_api.py
