[tool.poetry]
name = "withsecure-microservices"
version = "0.1.0"
description = "Microservices transformation of the withsecure binary classification ML pipeline"
authors = ["Moe.Eisa <mohamed.abdulaziz.eisa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.1"
pydantic-settings = "^2.0.3"
loguru = "^0.7.2"
numpy = "^1.24.0"
psutil = "^5.9.0"
onnx = "^1.18.0"
onnxruntime = "^1.22.1"
skl2onnx = "^1.19.1"
wemake-python-styleguide = "^0.18.0"
black = "^23.12.1"
scikit-learn = "1.3.0"
imbalanced-learn = "0.11.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.12.4"
pytest = ">=8.3.2"
httpx = ">=0.27.0"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
